@@ -9,8 +9,7 @@ import ru.practicum.stats.model.EndpointHit;
 import ru.practicum.stats.repository.StatsRepository;
 
 import java.time.LocalDateTime;
-import java.util.LinkedHashMap;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -45,20 +44,29 @@ public class StatsService {
             throw new IllegalArgumentException("End time cannot be before start time");
         }
 
-        List<EndpointHit> hits;
-        if (uris == null || uris.isEmpty()) {
-            hits = statsRepository.findHits(start, end, null);
-        } else {
-            hits = statsRepository.findHits(start, end, uris);
-        }
+        List<EndpointHit> hits = uris == null || uris.isEmpty()
+                ? statsRepository.findHits(start, end, null)
+                : statsRepository.findHits(start, end, uris);
 
         if (unique) {
-            hits = hits.stream().collect(Collectors.toMap(hit -> hit.getIp() + hit.getUri(), hit -> hit, (hit1, hit2) -> hit1, LinkedHashMap::new)).values().stream().toList();
+            Set<String> seen = new HashSet<>();
+            hits = hits.stream()
+                    .filter(hit -> seen.add(hit.getIp() + hit.getUri()))
+                    .collect(Collectors.toList());
         }
 
-        return hits.stream().collect(Collectors.groupingBy(hit -> hit.getApp() + "|" + hit.getUri(), Collectors.counting())).entrySet().stream().map(entry -> {
+        Map<String, Long> statsMap = new LinkedHashMap<>();
+        for (EndpointHit hit : hits) {
+            String key = hit.getApp() + "|" + hit.getUri();
+            statsMap.put(key, statsMap.getOrDefault(key, 0L) + 1);
+        }
+
+        List<ViewStats> result = new ArrayList<>();
+        for (Map.Entry<String, Long> entry : statsMap.entrySet()) {
             String[] parts = entry.getKey().split("\\|", 2);
-            return new ViewStats(parts[0], parts[1], entry.getValue());
-        }).collect(Collectors.toList());
+            result.add(new ViewStats(parts[0], parts[1], entry.getValue()));
+        }
+
+        return result;
     }
 }
